Add 'Injection' item to gelas calculator
Added new item type 'Injection' to the gelas calculator.

--- a/da-lokal/index.html
+++ b/da-lokal/index.html
@@ -134,6 +134,15 @@
             <div class="btn" onclick="increment('fisikHot')">+</div>
           </div>
         </div>
+        <div class="item">
+          <img src="gelas.png" alt="Injection" />
+          <div class="label"><span>I</span>-<span>njection</span></div>
+          <div class="buttons">
+            <div class="btn" onclick="decrement('fisikInjection')">-</div>
+            <div class="count" id="fisikHot">0</div>
+            <div class="btn" onclick="increment('fisikInjection')">+</div>
+          </div>
+        </div>
 
         <div class="total-box" id="totalFisik">Total : 0</div>
       </div>
@@ -166,6 +175,14 @@
             <div class="btn" onclick="decrement('terjualHot')">-</div>
             <div class="count" id="terjualHot">0</div>
             <div class="btn" onclick="increment('terjualHot')">+</div>
+          </div>
+          <div class="item">
+          <img src="gelas.png" alt="Injection" />
+          <div class="label"><span>I</span>-<span>njection</span></div>
+          <div class="buttons">
+            <div class="btn" onclick="decrement('terjualInjetion')">-</div>
+            <div class="count" id="terjualHot">0</div>
+            <div class="btn" onclick="increment('terjualInjection')">+</div>
           </div>
         </div>
 
@@ -222,3 +239,4 @@
     </script>
   </body>
 </html>
+
