--- a/index.html
+++ b/index.html
@@ -143,6 +143,14 @@
             <div class="count" id="fisikHot">0</div>
             <div class="btn" onclick="increment('fisikHot')">+</div>
           </div>
+          <div class="item">
+          <img src="gelas.png" alt="Injection" />
+          <div class="label"><span>I</span>-<span>njection</span></div>
+          <div class="buttons">
+            <div class="btn" onclick="decrement('fisikInjection')">-</div>
+            <div class="count" id="fisikHot">0</div>
+            <div class="btn" onclick="increment('fisikInjection')">+</div>
+          </div>
         </div>
 
         <div class="total-box" id="totalFisik">Total : 0</div>
@@ -176,6 +184,14 @@
             <div class="btn" onclick="decrement('terjualHot')">-</div>
             <div class="count" id="terjualHot">0</div>
             <div class="btn" onclick="increment('terjualHot')">+</div>
+          </div>
+        <div class="item">
+          <img src="gelas.png" alt="Injection" />
+          <div class="label"><span>I</span>-<span>njection</span></div>
+          <div class="buttons">
+            <div class="btn" onclick="decrement('terjualInjection')">-</div>
+            <div class="count" id="terjualHot">0</div>
+            <div class="btn" onclick="increment('terjualInjection')">+</div>
           </div>
         </div>
 
@@ -232,6 +248,7 @@
     </script>
   </body>
 </html>
+
 
 
 
